Fix: title not display properly in dark mode

--- a/store/src/app/pages/products/products.component.scss
+++ b/store/src/app/pages/products/products.component.scss
@@ -51,10 +51,6 @@ nz-carousel,
   padding: 0;
 }
 
-.original-price {
-  color: rgba(0, 0, 0, 0.65);
-}
-
 .btn {
   margin-top: 10px;
   margin-bottom: 5px;
